// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background Attachment 1`] = `
Object {
  "backgroundAttachment": "fixed",
}
`;

exports[`Background Attachment 2`] = `
Object {
  "backgroundAttachment": "local",
}
`;

exports[`Background Attachment 3`] = `
Object {
  "backgroundAttachment": "scroll",
}
`;

exports[`Background Clip 1`] = `
Object {
  "backgroundClip": "border-box",
  "webkitBackgroundClip": "border-box",
}
`;

exports[`Background Clip 2`] = `
Object {
  "backgroundClip": "padding-box",
  "webkitBackgroundClip": "padding-box",
}
`;

exports[`Background Clip 3`] = `
Object {
  "backgroundClip": "content-box",
  "webkitBackgroundClip": "content-box",
}
`;

exports[`Background Clip 4`] = `
Object {
  "backgroundClip": "text",
  "webkitBackgroundClip": "text",
}
`;

exports[`Background Clip With Different Key 1`] = `
Object {
  "backgroundClip": "border-box",
  "webkitBackgroundClip": "border-box",
}
`;

exports[`Background Clip With Different Key 2`] = `
Object {
  "backgroundClip": "padding-box",
  "webkitBackgroundClip": "padding-box",
}
`;

exports[`Background Clip With Different Key 3`] = `
Object {
  "backgroundClip": "content-box",
  "webkitBackgroundClip": "content-box",
}
`;

exports[`Background Clip With Different Key 4`] = `
Object {
  "backgroundClip": "text",
  "webkitBackgroundClip": "text",
}
`;

exports[`Background Color 1`] = `
Object {
  "backgroundColor": "currentColor",
}
`;

exports[`Background Color 2`] = `
Object {
  "--w-bg-opacity": "1",
  "backgroundColor": "rgba(255, 255, 255, var(--w-bg-opacity))",
}
`;

exports[`Background Color 3`] = `
Object {
  "--w-bg-opacity": "1",
  "backgroundColor": "rgba(29, 78, 216, var(--w-bg-opacity))",
}
`;

exports[`Background Color 4`] = `
Object {
  "--w-bg-opacity": "1",
  "backgroundColor": "rgba(239, 68, 68, var(--w-bg-opacity))",
}
`;

exports[`Background Color With Different Opacity Name 1`] = `
Object {
  "css": Object {
    "--my-opacity": "0.5",
    "backgroundColor": "rgba(0, 0, 0, var(--my-opacity))",
  },
}
`;

exports[`Background Color With Different Opacity Name 2`] = `
Object {
  "css": Object {
    "--my-opacity": "0.5",
    "backgroundColor": "rgba(254, 243, 199, var(--my-opacity))",
  },
}
`;

exports[`Background Color With Opacity 1`] = `
Object {
  "css": Object {
    "--w-bg-opacity": "0.5",
    "backgroundColor": "rgba(0, 0, 0, var(--w-bg-opacity))",
  },
}
`;

exports[`Background Color With Opacity 2`] = `
Object {
  "css": Object {
    "--w-bg-opacity": "0.5",
    "backgroundColor": "rgba(254, 243, 199, var(--w-bg-opacity))",
  },
}
`;

exports[`Background Color Without Opacity 1`] = `
Object {
  "css": Object {
    "backgroundColor": "#000",
  },
}
`;

exports[`Background Color Without Opacity 2`] = `
Object {
  "css": Object {
    "backgroundColor": "#fef3c7",
  },
}
`;

exports[`Background Generic 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`Background Generic 2`] = `
Object {
  "backgroundColor": "red",
}
`;

exports[`Background Generic 3`] = `
Object {
  "backgroundColor": "aliceBlue",
}
`;

exports[`Background Generic 4`] = `
Object {
  "backgroundColor": "#ffffff",
}
`;
